<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="Acceleration_Sensor">Acceleration</string>
    <string name="Access">Access</string>
    <string name="Ambient_Temperature_Sensor">Ambient Temperature</string>
    <string name="Android_SDK_Version">Android SDK Version</string>
    <string name="Android_Version">Android</string>
    <string name="BID_2D_Physics">2D Physics engine</string>
    <string name="BID_3D_Garden">Garden scene</string>
    <string name="BID_3D_Marooned">Marooned scene</string>
    <string name="BID_3D_Physics">3D Physics engine</string>
    <string name="BID_Chess">Strategy games Chess</string>
    <string name="BID_ChineseChess">Strategy games Chinese Chess</string>
    <string name="BID_Database">Database I/O</string>
    <string name="BID_FFT">FFT operation</string>
    <string name="BID_GEMM">GEMM operation</string>
    <string name="BID_Gobang">Strategy games Gobang</string>
    <string name="BID_HASH">Hash checksum</string>
    <string name="BID_IMG_Blur">Image processing Blur</string>
    <string name="BID_IMG_Decode">Image Decode JPG</string>
    <string name="BID_IMG_Fisheye">Image processing Fisheye</string>
    <string name="BID_Json">Parsing JSON</string>
    <string name="BID_MAP">MAP operation</string>
    <string name="BID_MultiTask">Multi-task</string>
    <string name="BID_MultiThread">Multi-threading</string>
    <string name="BID_PNG_Decode">Image Decode PNG</string>
    <string name="BID_RAM_Access">RAM Random Access</string>
    <string name="BID_RAM_Speed">RAM Speed</string>
    <string name="BID_RandomIO">Random Access I/O</string>
    <string name="BID_Secure">Secure Message</string>
    <string name="BID_Storage">Storage I/O</string>
    <string name="BID_XML">Parsing XML</string>
    <string name="Battery_Level">Battery Level</string>
    <string name="Bluetooth">Bluetooth</string>
    <string name="Brand">Brand</string>
    <string name="CPU_Model">CPU Model</string>
    <string name="CPU_Type">Type</string>
    <string name="Clean_up">Clean up</string>
    <string name="Color">Color</string>
    <string name="Cores">Cores</string>
    <string name="Density">Density</string>
    <string name="Device_Model">Device Model</string>
    <string name="External_Storage">External Storage</string>
    <string name="Female">Female</string>
    <string name="Front_facing_Camera">Front-facing Camera</string>
    <string name="GPS">GPS</string>
    <string name="GPU_Frequency">GPU Frequency</string>
    <string name="GPU_Version">GPU Version</string>
    <string name="Game_rotation_vector">Game Ratation Vector</string>
    <string name="Geomagnetic">Geomagnetic Rotation Vector</string>
    <string name="Gravity">Gravity</string>
    <string name="Gyroscope">Gyroscope</string>
    <string name="Gyroscope_uncalibrated">Gyroscope Uncalibrated</string>
    <string name="Heart_rate">Heart rate</string>
    <string name="IMEI">IMEI</string>
    <string name="Internal_Storage">Internal Storage</string>
    <string name="Kernel">Kernel</string>
    <string name="Light">Light Sensor</string>
    <string name="Linear_acceleration">Linear Acceleration</string>
    <string name="Loc">Location</string>
    <string name="Magnetic_field">Magnetic Field</string>
    <string name="Magnetic_field_uncalibrated">Magnetic Field Uncalibrated</string>
    <string name="Male">Male</string>
    <string name="Material">Material</string>
    <string name="Model">Model</string>
    <string name="More">More</string>
    <string name="Multi_touch">Multi-touch</string>
    <string name="NFC">NFC</string>
    <string name="Orientation">Orientation</string>
    <string name="Photograph">Photograph</string>
    <string name="Pressure">Pressure</string>
    <string name="Proximity">Proximity</string>
    <string name="RAM">RAM</string>
    <string name="Rear_Camera">Rear Camera</string>
    <string name="Relative_humidity">Relative Humidity</string>
    <string name="Renderer">Renderer</string>
    <string name="Resolution">Resolution</string>
    <string name="Rotation_vector">Rotation Vector</string>
    <string name="SID_3D_GARDEN">3D [Garden]</string>
    <string name="SID_3D_MAROONED">3D [Marooned]</string>
    <string name="SID_ALL">Total Score</string>
    <string name="SID_CPU_APP">CPU Common Use</string>
    <string name="SID_CPU_MATH">CPU Mathematics</string>
    <string name="SID_CPU_MULTI">CPU Multi-Core</string>
    <string name="SID_RAM">RAM Score</string>
    <string name="SID_UX_DATA">UX Data process</string>
    <string name="SID_UX_GAME">UX Strategy games</string>
    <string name="SID_UX_IMG">UX Image process</string>
    <string name="SID_UX_IO">UX I/O performance</string>
    <string name="SID_UX_SEC">UX Data Secure</string>
    <string name="Sensor">Sensor</string>
    <string name="Significant_motion">Significant Motion</string>
    <string name="Size">Size</string>
    <string name="Specifications">Specifications</string>
    <string name="Step_counter">Step Counter</string>
    <string name="Step_detector">Step Detector</string>
    <string name="System_Storage">System Storage</string>
    <string name="TID_3D">3D</string>
    <string name="TID_3D_INFO">3D game performance</string>
    <string name="TID_CPU">CPU</string>
    <string name="TID_CPU_INFO">CPU performance</string>
    <string name="TID_RAM">RAM</string>
    <string name="TID_RAM_INFO">RAM performance</string>
    <string name="TID_UX">UX</string>
    <string name="TID_UX_INFO">User Experience performance</string>
    <string name="TemperatureC">Temperature</string>
    <string name="Testing">Testing, please wait…</string>
    <string name="Testing_info">Testing may take you several minutes…</string>
    <string name="Testing_optimize_mem">Optimize memory to make benchmark more accurate</string>
    <string name="Untested">Untested</string>
    <string name="Vender">Vender</string>
    <string name="Video_Specification">Video Specification</string>
    <string name="WIFI">WIFI</string>
    <string name="Weight">Weight</string>
    <string name="a3d_download">Start downloading AnTuTu 3D Plug-in…</string>
    <string name="a3d_test">3D Benchmark</string>
    <string name="a3d_wait">Please wait for AnTuTu 3D Plug-in install</string>
    <string name="abenckmark_rules"><a href="http://www.antutu.com/antutubenchmarkclause.htm">AnTuTu Benchmark Terms of Service</a></string>
    <string name="abenckmark_websize">http://www.antutu.com</string>
    <string name="about">About</string>
    <string name="about_copyright">Copyright © 2010 – 2017 AnTuTu. All Rights Reserved.</string>
    <string name="always_finish_info">"Please unchecked the \"Don't keep activities\" in Developer Options"</string>
    <string name="always_finish_title">"\"Don't keep activities\" ON"</string>
    <string name="anti_spam_text">QRCode of result</string>
    <string name="antutu_prompt">Antutu Prompt</string>
    <string name="app_name">AnTuTu Benchmark</string>
    <string name="attention">Attention</string>
    <string name="auto_download_apk">Download apk automatically</string>
    <string name="auto_download_on_wifi">preload update apk automatic when wifi connected</string>
    <string name="basic_info">Basic Info</string>
    <string name="battery">Battery</string>
    <string name="battery_test">Battery Test</string>
    <string name="bit32">32-bit</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">OK</string>
    <string name="connect">Contact</string>
    <string name="download">Download</string>
    <string name="email">email</string>
    <string name="feedback_contact_hint">Your email address</string>
    <string name="feedback_hint">If you have any question or suggestion,please feel free to tell us.</string>
    <string name="language">Language</string>
    <string name="loading">Loading…</string>
    <string name="please_wait">Please wait…</string>
    <string name="send">Send</string>
    <string name="submit">Submit</string>
    <string name="submit_email">Send email</string>
    <string name="verify_need_test">You need run full test before validate, run it now?</string>
    <string name="your_suggest">Your Suggestions</string>
    <string name="acceler_access_desc">AnTuTu Cooler uses accessibility feature to help you stop unnecessary background apps, and in turn free up memory and speed up your phone.90% of users have enabled this feature, come and experience AnTuTu Cooler now.</string>
    <string name="accelerate_now">Cooling now</string>
    <string name="app_name_long">AnTuTu Cooler</string>
    <string name="download_antutu_accelerate_now">Enable AnTuTu Cooler Now</string>
    <string name="game_3d_subtitle">Recommendations based on your device performance：</string>
    <string name="game_3d_title">3D game performance</string>
    <string name="game_performance">3D performance</string>
    <string name="game_performance_0_desc">bad experience</string>
    <string name="game_performance_0_title">15,000 or less</string>
    <string name="game_performance_15000_desc">may get stuck</string>
    <string name="game_performance_15000_title">15,000-25,000</string>
    <string name="game_performance_25000_desc">run smoothly</string>
    <string name="game_performance_25000_title">higher than 25,000</string>
    <string name="game_performance_device_desc">Your device %1$s experience 3D games:%2$s</string>
    <string name="game_performance_garden">3D game performance(Garden)</string>
    <string name="game_performance_marooned">3D game performance(Marooned)</string>
    <string name="game_performance_state">3D game performance instructions</string>
    <string name="loading_3d_game">Loading 3D performance</string>
    <string name="next_continue">Next time</string>
    <string name="no_app">no app found</string>
    <string name="no_content_3d_ad">Can not get info of 3D performance</string>
    <string name="ok">OK</string>
    <string name="one_click_kill">Clean Heating Apps</string>
    <string name="sel_red_apps">Select the heating Apps</string>
    <string name="setting_push_desc">accept push news</string>
    <string name="setting_push_title">open push</string>
    <string name="test_3d">3D Test</string>
    <string name="tips_new_info">"Cooling Mobile will close all the running apps you select.

After cooling, you need to restart the apps if you want to recive that app's notification."</string>
</resources>