<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="1" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="-1" android:layout_height="-1">
    <ScrollView android:layout_width="-1" android:layout_height="200dp">
        <TextView android:textSize="16sp" android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/tips_new_info" />
    </ScrollView>
    <LinearLayout android:layout_width="-1" android:layout_height="-2">
        <Button android:id="@id/cancel" android:layout_width="-2" android:layout_height="-2" android:text="@string/cancel" android:layout_weight="1.0" />
        <Button android:id="@id/ok" android:layout_width="-2" android:layout_height="-2" android:text="@string/ok" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>
